topic centering, and synth_canvas alignment -- synth canvas size may not be an issue later

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -53,12 +53,10 @@ a:hover
 
 #topics_container
   background-color: #27ae60
-  width: 100%
-  padding: 10px
 
   #topics_list
-    +margin-reset
-
+    margin: auto
+    padding: 10px 0px 10px 40px
 
     .topic
       background-color: #2ecc71
